// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of Tooltip in position bottom 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="bottom"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position bottomLeft 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="bottomLeft"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position bottomRight 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="bottomRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position left 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="left"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position middle 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="middle"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position middleLeft 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="middleLeft"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position middleRight 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="middleRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position none 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position right 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="right"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position top 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="top"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position topLeft 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="topLeft"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Creation of Tooltip in position topRight 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="topRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  padding={null}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Tooltip control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="middleRight"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  onError={[Function]}
  padding={null}
  parent={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Tooltip__TooltipView
    className="ui-tooltip test-class"
    location="middleRight"
    sizing="small"
    style={
      Object {
        "backgroundColor": "#708090",
        "color": "#ffffff",
      }
    }
    visible={false}
    width="unset"
  >
    <Tooltip__TootipContentView
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
    >
      [object Object]
    </Tooltip__TootipContentView>
    <Tooltip__StyledTriangle
      direction="left"
      location="middleRight"
      sizing="small"
      style={
        Object {
          "fill": "#708090",
          "stroke": "#708090",
        }
      }
    />
  </Tooltip__TooltipView>
</Wrapper>
`;

exports[`Test disabling of a Tooltip 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="top"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  onError={[Function]}
  padding={null}
  parent={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Tooltip__TooltipView
    className="ui-tooltip"
    location="top"
    sizing="small"
    style={
      Object {
        "backgroundColor": "#708090",
        "color": "#ffffff",
      }
    }
    visible={false}
    width="unset"
  >
    <Tooltip__TootipContentView
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
    />
    <Tooltip__StyledTriangle
      direction="down"
      location="top"
      sizing="small"
      style={
        Object {
          "fill": "#708090",
          "stroke": "#708090",
        }
      }
    />
  </Tooltip__TooltipView>
</Wrapper>
`;

exports[`Test making a Tooltip invisible 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  id={null}
  left={null}
  location="top"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Tooltip"
  onError={[Function]}
  padding={null}
  parent={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "#708090",
      "color": "#ffffff",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Tooltip__TooltipView
    className="ui-tooltip"
    location="top"
    sizing="small"
    style={
      Object {
        "backgroundColor": "#708090",
        "color": "#ffffff",
      }
    }
    visible={false}
    width="unset"
  >
    <Tooltip__TootipContentView
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "#708090",
          "color": "#ffffff",
        }
      }
    />
    <Tooltip__StyledTriangle
      direction="down"
      location="top"
      sizing="small"
      style={
        Object {
          "fill": "#708090",
          "stroke": "#708090",
        }
      }
    />
  </Tooltip__TooltipView>
</Wrapper>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "id": null,
  "left": null,
  "location": "top",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Tooltip",
  "padding": null,
  "parent": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "#708090",
    "color": "#ffffff",
  },
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Tooltip props object 2`] = `
Object {
  "children": null,
  "classes": b {
    "_classes": Map {
      "ui-tooltip" => true,
    },
    "_clstr": "",
    "_delimiter": " ",
    "_dirty": true,
    "_obj": null,
    "delete": [Function],
    "reset": [Function],
  },
  "show": false,
  "sizing": "normal",
  "style": Object {},
}
`;
